// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-links-list Renders \`c-links-list\` with default props 1`] = `
<div
  class="mt-1"
/>
`;

exports[`c-links-list Renders \`c-links-list\` with links 1`] = `
<div
  class="mt-1"
>
  <div>
    <span
      class="category mr-2"
    >
      FirstCategory
    </span>
    <hr
      aria-orientation="horizontal"
      class="v-divider theme--light"
      role="separator"
    />
    <div>
      <div
        class="pa-2 text-right"
      >
        <a
          href="FirstCategoryLink1"
          target="_blank"
        >
          FirstCategoryLinkLabel1
        </a>
      </div>
    </div>
    <div>
      <div
        class="pa-2 text-right"
      >
        <a
          href="FirstCategoryLink2"
          target="_blank"
        >
          FirstCategoryLinkLabel2
        </a>
      </div>
    </div>
    <div>
      <div
        class="pa-2 text-right"
      >
        <a
          href="FirstCategoryLink3"
          target="_blank"
        >
          FirstCategoryLinkLabel3
        </a>
      </div>
    </div>
    <div>
      <div
        class="pa-2 text-right"
      >
        <a
          href="FirstCategoryLink4"
          target="_blank"
        >
          FirstCategoryLinkLabel4
        </a>
      </div>
    </div>
  </div>
  <div>
    <span
      class="category mr-2"
    >
      SecondCategory
    </span>
    <hr
      aria-orientation="horizontal"
      class="v-divider theme--light"
      role="separator"
    />
    <div>
      <div
        class="pa-2 text-right"
      >
        <a
          href="SecondCategoryLink1"
          target="_blank"
        >
          SecondCategoryLinkLabel1
        </a>
      </div>
    </div>
  </div>
  <div>
    <span
      class="category mr-2"
    >
      ThirdCategory
    </span>
    <hr
      aria-orientation="horizontal"
      class="v-divider theme--light"
      role="separator"
    />
    <div>
      <div
        class="pa-2 text-right"
      >
        <a
          href="ThirdCategoryLink1"
          target="_blank"
        >
          ThirdCategoryLinkLabel1
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-links-list Renders \`c-links-list\` with links and category 1`] = `
<div
  class="mt-1"
>
  <div>
    <span
      class="category mr-2"
    >
      SecondCategory
    </span>
    <hr
      aria-orientation="horizontal"
      class="v-divider theme--light"
      role="separator"
    />
    <div>
      <div
        class="pa-2 text-right"
      >
        <a
          href="SecondCategoryLink1"
          target="_blank"
        >
          SecondCategoryLinkLabel1
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-links-list Renders \`c-links-list\` with links with copy action 1`] = `
<div
  class="mt-1"
>
  <div>
    <span
      class="category mr-2"
    >
      FirstCategory
    </span>
    <hr
      aria-orientation="horizontal"
      class="v-divider theme--light"
      role="separator"
    />
    <div>
      <div
        class="pa-2 text-right"
      >
        <c-copy-wrapper-stub
          value="FirstCategoryLink1"
        >
          FirstCategoryLinkLabel1
        </c-copy-wrapper-stub>
      </div>
    </div>
    <div>
      <div
        class="pa-2 text-right"
      >
        <c-copy-wrapper-stub
          value="FirstCategoryLink2"
        >
          FirstCategoryLinkLabel2
        </c-copy-wrapper-stub>
      </div>
    </div>
    <div>
      <div
        class="pa-2 text-right"
      >
        <c-copy-wrapper-stub
          value="FirstCategoryLink3"
        >
          FirstCategoryLinkLabel3
        </c-copy-wrapper-stub>
      </div>
    </div>
    <div>
      <div
        class="pa-2 text-right"
      >
        <c-copy-wrapper-stub
          value="FirstCategoryLink4"
        >
          FirstCategoryLinkLabel4
        </c-copy-wrapper-stub>
      </div>
    </div>
  </div>
  <div>
    <span
      class="category mr-2"
    >
      SecondCategory
    </span>
    <hr
      aria-orientation="horizontal"
      class="v-divider theme--light"
      role="separator"
    />
    <div>
      <div
        class="pa-2 text-right"
      >
        <a
          href="SecondCategoryLink1"
          target="_blank"
        >
          SecondCategoryLinkLabel1
        </a>
      </div>
    </div>
  </div>
  <div>
    <span
      class="category mr-2"
    >
      ThirdCategory
    </span>
    <hr
      aria-orientation="horizontal"
      class="v-divider theme--light"
      role="separator"
    />
    <div>
      <div
        class="pa-2 text-right"
      >
        <a
          href="ThirdCategoryLink1"
          target="_blank"
        >
          ThirdCategoryLinkLabel1
        </a>
      </div>
    </div>
  </div>
</div>
`;
